src/app/cases/viewer/case-viewer.scss
th {
  width: 1%;
  white-space: nowrap;
  vertical-align: top;
}

.compound-field {
  td {
    padding: 0;
  }
}

.case-viewer-controls {
   margin-top: 47px;
   margin-bottom: 20px;
 }

ccd-case-header {
  float: left;
  margin-right: 10px;
}

ccd-event-trigger {
  float: right;
}

